// Generated by Microsoft TypeSpec

syntax = "proto3";

package notesapi.v1;
option go_package = "github.com/the-gaurav-bhatt/notesapi";

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string username = 2;
  string password = 3;
}

message Credentials {
  string username = 1;
  string password = 2;
}

message Note {
  string id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
}

message ListNotesResponse {
  repeated Note notes = 1;
}

message Empty {}

message RegisterRequest {
  User user = 1;
}

message LoginRequest {
  Credentials credentials = 1;
}

service Auth {
  rpc Register(RegisterRequest) returns (User);
  rpc Login(LoginRequest) returns (User);
}

message CreateNoteRequest {
  Note note = 1;
}

message GetNoteRequest {
  string id = 1;
}

message UpdateNoteRequest {
  string id = 1;
  Note note = 2;
}

message DeleteNoteRequest {
  string id = 1;
}

service Notes {
  rpc ListNotes(google.protobuf.Empty) returns (ListNotesResponse);
  rpc CreateNote(CreateNoteRequest) returns (Note);
  rpc GetNote(GetNoteRequest) returns (Note);
  rpc UpdateNote(UpdateNoteRequest) returns (Note);
  rpc DeleteNote(DeleteNoteRequest) returns (Empty);
}
